# mcp-test

./: .env.template  .gitignore  README.md  main.py  pyproject.toml
src/mcp_calendar/: __init__.py  calendar.py
